welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:6: error: not found: value dessinmotif
    dessinmotif()
    ^PatternPicture:48: error: not found: value placementHoeizontal
  placementHoeizontal()
  ^